--- a/admin/.env
+++ b/admin/.env
@@ -1,4 +1,4 @@
-HOST = '127.0.0.1'
-DATABASE = 'postgres'
-USER = 'postgres'
-PASSWORD = 'remiksow'
+HOST = '***'
+DATABASE = '***'
+USER = '***'
+PASSWORD = '***'
